@@ -29,6 +29,9 @@ BUGFIXES:
   ZOOKEEPER-1373. Hardcoded SASL login context name clashes with Hadoop security 
   configuration override. (Eugene Koontz and Thomas Weise via mahadev)
 
+  ZOOKEEPER-1352. server.InvalidSnapshotTest is using connection timeouts that 
+  are too short. (phunt via mahadev)
+
 IMPROVEMENTS:
  
  ZOOKEEPER-1322. Cleanup/fix logging in Quorum code. (phunt via mahadev)
